cd/fts-agent/workload.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: agent
spec:
  replicas: 1
  revisionHistoryLimit: 2
  selector: {}
  template:
    metadata:
      labels:
        app.life.uni-leipzig.de/redundancy: none
        app.life.uni-leipzig.de/service-level: silver
    spec:
      enableServiceLinks: false
      containers:
      - name: agent
        image: ghcr.io/medizininformatik-initiative/fts/clinical-domain-agent:latest@sha256:e10740a753439edb9ddc6c44fd0929d934e92526e2a66cf5a9351be3499c2029
        ports:
        - name: http
          containerPort: 8080
        volumeMounts:
        - name: config
          mountPath: /app/application.yaml
          subPath: application.yaml
        - name: projects
          mountPath: /app/projects
        - name: deidentifhir
          mountPath: /app/projects/distance/deidentifhir
        - name: ca-certs
          mountPath: /certificates
          readOnly: true
        startupProbe:
          httpGet: &probe
            path: /fts/actuator/health
            port: http
          failureThreshold: 24
          periodSeconds: 10
        readinessProbe:
          httpGet: *probe
        livenessProbe:
          httpGet: *probe
        resources:
          requests:
            cpu: "125m"
            memory: "1Gi"
          limits:
            memory: "1Gi"
      volumes:
      - name: config
        configMap:
          name: agent-config
      - name: projects
        configMap:
          name: agent-projects
      - name: deidentifhir
        configMap:
          name: agent-deidentifhir
      - name: ca-certs
        configMap:
          name: life-ca-certs
          items:
          - key: life-root-ca-2.pem
            path: life-root-ca-2.crt
