cd/fts-agent/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: agent
spec:
  ports:
  - name: http
    port: 80
    targetPort: http
  selector: {}
